*** 20010710_3 by jdc
- Put back HAVE_GETPAGESIZE support.  Accidentally removed during prior
  changes.



*** 20010710_2 by jdc
- More stuff for encrypted link removal.



*** 20010710_1 by jdc
- Complete removal of encrypted link (CRYPTLINK) support; this includes
  RSA authentication.



*** 20010708_4 by db
- reverted KSERVER changes. NOT DISCUSSED, NOT APPROVED



*** 20010708_3 by a1kmm
- The first phase of adding KSERVER.


*** 20010708_2 by a1kmm
- Had better change the path in mkkeypair back...


*** 20010708_1 by a1kmm
- Remove P-lines when they are not in use on rehash.


*** 20010705_5 by greg
- reverted ppath changes .. oops


*** 20010705_4 by wcampbel
Updated the docs for greg's changed...


*** 20010705_3 by db
- added NO_HACK_OPS, don't allow users to hack ops on a channel period.



*** 20010705_2 by greg
- config.h / ircd.c
		made pid file stuffs more multi ircd in same directory
		friendly, at the expense of multiple server with the same
		name.. well.. that's another case entirely.
		anyways, pidfile is now me.name.pid by default, unless
		PPATH is defined.


*** 20010705_1 by db
- don't allow opers to join on split either.



*** 20010704_8 by greg
Uh. Right ..

- config.h	
		made CRYPT_LINKS_PRIVATEKEYFILE deprecated, documented other
		cryptlinks related options
		prefer the me.name.key format. much cleaner.
- include/m_info.h
		show PRIVATEKEYFILE define as 'NONE' if no override
- src/s_crypt.c	
		made PRIVATEKEYFILE deprecated in favor of me.name

TODO:
- make ircd.pid stuff multi-ircd-in-one-dir friendly
- keys not 2048 bits long? more descriptive errors?
- more testing
- more testing
- rc to lightning/solidstreaming


*** 20010704_7 by db
- reformatted hard to read code. grrrr why do people do 
  function () { ?



*** 20010704_6 by wcampbel
Added make lint...that won't be very fun to clean up though


*** 20010704_5 by leeh
- we shouldnt limit things if it isnt our client.. :)


*** 20010704_4 by wcampbel
Updated .depend

