@@ -1,3 +1,15 @@
+*** 20010715_1 by leeh
+- HIDE_SERVERS_IP -> HIDE_SERVERS_IPS
+- in get_client_name()
+
+  #ifdef HIDE_SERVERS_IPS
+    if(IsServer(client))
+      return *MASKED_IP*
+  #endif
+
+  this should catch any we missed.. and is about 100 times simpler ;p
+
+
 *** 20010710_3 by jdc
 - Put back HAVE_GETPAGESIZE support.  Accidentally removed during prior
   changes.
